<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalCenterActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/COMMUNITY"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Main_Label_Left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vgl33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hgl90" />

    <Button
        android:id="@+id/HOME"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Main_Label_Center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vgl66"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vgl33"
        app:layout_constraintTop_toTopOf="@+id/hgl90"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/PERSONAL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Main_Label_Right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vgl66"
        app:layout_constraintTop_toTopOf="@+id/hgl90"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/Personal_Center_Username"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl30"
        app:layout_constraintEnd_toStartOf="@+id/vgl80"
        app:layout_constraintStart_toStartOf="@+id/vgl20"
        app:layout_constraintTop_toTopOf="@+id/hgl25" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/hgl90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hgl90"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ChangeU"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:text="@string/Personal_Center_ChangeUsername"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hgl30" />

    <Button
        android:id="@+id/ChangeA"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:text="@string/Personal_Center_ChangeAvatar"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hgl40" />

    <Button
        android:id="@+id/ChangeP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:text="@string/Personal_Center_ChangePassword"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hgl50" />

    <Button
        android:id="@+id/Setting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:text="@string/Personal_Center_Setting"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hgl60" />

    <Button
        android:id="@+id/Postings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:text="@string/Personal_Center_Postings"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hgl70" />

    <Button
        android:id="@+id/LogOut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:text="@string/Personal_Center_LogOut"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hgl78"
        android:onClick="skip_to_Main"/>

    <ImageView
        android:id="@+id/AvatarImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/hgl25"
        app:layout_constraintEnd_toStartOf="@+id/vgl66"
        app:layout_constraintStart_toStartOf="@+id/vgl33"
        app:layout_constraintTop_toTopOf="@+id/hgl10"
        app:srcCompat="@drawable/defultavatar" />

</androidx.constraintlayout.widget.ConstraintLayout>