<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <SearchView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/hgl10"
        app:layout_constraintEnd_toStartOf="@+id/vgl95"
        app:layout_constraintStart_toStartOf="@+id/vgl5"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


    <TextView
        android:id="@+id/Restaurants"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/HomeSite_Label_Restaurantes"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl26"
        app:layout_constraintEnd_toStartOf="@+id/vgl95"
        app:layout_constraintStart_toStartOf="@+id/vgl33"
        app:layout_constraintTop_toTopOf="@+id/hgl10" />

    <TextView
        android:id="@+id/BeverageShops"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/HomeSite_Label_BeverageShops"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl42"
        app:layout_constraintEnd_toStartOf="@+id/vgl95"
        app:layout_constraintStart_toStartOf="@+id/vgl33"
        app:layout_constraintTop_toTopOf="@+id/hgl26" />

    <TextView
        android:id="@+id/Entertainments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/HomeSite_Label_Entertainments"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl58"
        app:layout_constraintEnd_toStartOf="@+id/vgl95"
        app:layout_constraintStart_toStartOf="@+id/vgl33"
        app:layout_constraintTop_toTopOf="@+id/hgl42" />

    <TextView
        android:id="@+id/DepartmentStores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/HomeSite_Label_DepartmentStores"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl74"
        app:layout_constraintEnd_toStartOf="@+id/vgl95"
        app:layout_constraintStart_toStartOf="@+id/vgl33"
        app:layout_constraintTop_toTopOf="@+id/hgl58" />

    <TextView
        android:id="@+id/Apartments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/HomeSite_Label_Apartments"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl90"
        app:layout_constraintEnd_toStartOf="@+id/vgl95"
        app:layout_constraintStart_toStartOf="@+id/vgl33"
        app:layout_constraintTop_toTopOf="@+id/hgl74" />

    <Button
        android:id="@+id/COMMUNITY"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Main_Label_Left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vgl33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hgl90" />

    <Button
        android:id="@+id/HOME"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Main_Label_Center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vgl66"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vgl33"
        app:layout_constraintTop_toTopOf="@+id/hgl90"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/PERSONAL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Main_Label_Right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vgl66"
        app:layout_constraintTop_toTopOf="@+id/hgl90"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/RImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/hgl26"
        app:layout_constraintEnd_toStartOf="@+id/vgl33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hgl10"
        app:srcCompat="@drawable/restaurantsum" />

    <ImageView
        android:id="@+id/BImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/hgl42"
        app:layout_constraintEnd_toStartOf="@+id/vgl33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hgl26"
        app:srcCompat="@drawable/beverages" />

    <ImageView
        android:id="@+id/EImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/hgl58"
        app:layout_constraintEnd_toStartOf="@+id/vgl33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hgl42"
        app:srcCompat="@drawable/ktvs" />

    <ImageView
        android:id="@+id/DImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/hgl74"
        app:layout_constraintEnd_toStartOf="@+id/vgl33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hgl58"
        app:srcCompat="@drawable/departmentstores" />

    <ImageView
        android:id="@+id/AImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/hgl90"
        app:layout_constraintEnd_toStartOf="@+id/vgl33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hgl74"
        app:srcCompat="@drawable/apartments" />


</androidx.constraintlayout.widget.ConstraintLayout>