<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatingActivity">


    <Button
        android:id="@+id/COMMUNITY"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Main_Label_Left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vgl33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hgl90" />

    <Button
        android:id="@+id/HOME"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Main_Label_Center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vgl66"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vgl33"
        app:layout_constraintTop_toTopOf="@+id/hgl90"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/PERSONAL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Main_Label_Right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vgl66"
        app:layout_constraintTop_toTopOf="@+id/hgl90"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vgl66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <ImageView
        android:id="@+id/Store_Picture"
        android:layout_width="113dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/hgl20"
        app:layout_constraintEnd_toStartOf="@+id/vgl33"
        app:layout_constraintStart_toStartOf="@+id/vgl05"
        app:layout_constraintTop_toTopOf="@+id/hgl05"
        app:srcCompat="@drawable/defultavatar" />

    <ImageView
        android:id="@+id/Comsuer_Picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/hgl13"
        app:layout_constraintEnd_toStartOf="@+id/vgl95"
        app:layout_constraintStart_toStartOf="@+id/vgl80"
        app:layout_constraintTop_toTopOf="@+id/hgl05"
        app:srcCompat="@drawable/cosumer_service" />

    <Button
        android:id="@+id/Store_Site_Rating"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Store_Site_Rating"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl20"
        app:layout_constraintEnd_toStartOf="@+id/vgl95"
        app:layout_constraintStart_toStartOf="@+id/vgl80"
        app:layout_constraintTop_toTopOf="@+id/hgl15" />

    <TextView
        android:id="@+id/Store_Name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:text="@string/Store_Site_Store_Name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl13"
        app:layout_constraintEnd_toStartOf="@+id/vgl80"
        app:layout_constraintStart_toStartOf="@+id/vgl33"
        app:layout_constraintTop_toTopOf="@+id/hgl05" />

    <RatingBar
        android:id="@+id/ratingBar6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/hgl20"
        app:layout_constraintEnd_toStartOf="@+id/vgl80"
        app:layout_constraintStart_toStartOf="@+id/vgl33"
        app:layout_constraintTop_toTopOf="@+id/hgl15" />

    <TextView
        android:id="@+id/Main_Business"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/Store_Site_Main_Business"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/hgl30"
        app:layout_constraintEnd_toStartOf="@+id/vgl95"
        app:layout_constraintStart_toStartOf="@+id/vgl05"
        app:layout_constraintTop_toTopOf="@+id/hgl20" />

    <TextView
        android:id="@+id/Comment_Area"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/Store_Site_Comment_Area"
        app:layout_constraintBottom_toTopOf="@+id/hgl45"
        app:layout_constraintEnd_toStartOf="@+id/vgl95"
        app:layout_constraintStart_toStartOf="@+id/vgl05"
        app:layout_constraintTop_toTopOf="@+id/hgl40" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="MultiAutoCompleteTextView"
        app:layout_constraintBottom_toTopOf="@+id/hgl90"
        app:layout_constraintEnd_toStartOf="@+id/vgl95"
        app:layout_constraintStart_toStartOf="@+id/vgl05"
        app:layout_constraintTop_toTopOf="@+id/hgl45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/Store_Address"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/Store_Site_Store_Address"
        app:layout_constraintBottom_toTopOf="@+id/hgl35"
        app:layout_constraintEnd_toStartOf="@+id/vgl95"
        app:layout_constraintStart_toStartOf="@+id/vgl05"
        app:layout_constraintTop_toTopOf="@+id/hgl30" />


</androidx.constraintlayout.widget.ConstraintLayout>